--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "react-scripts": "0.7.0"
   },
   "dependencies": {
+    "file-api": "^0.10.4",
     "marked": "^0.3.6",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-markdown-file": "0.0.4",
     "react-router": "^3.0.0",
     "semantic-ui": "^2.2.6"
   },
