--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^15.4.1",
     "react-markdown-file": "0.0.4",
     "react-router": "^3.0.0",
+    "react-sticky": "^5.0.5",
     "semantic-ui": "^2.2.6"
   },
   "scripts": {
