Setup server and blog items

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "react-scripts": "0.7.0"
   },
   "dependencies": {
+    "axios": "^0.15.3",
+    "express": "^4.14.0",
     "file-api": "^0.10.4",
     "marked": "^0.3.6",
     "react": "^15.4.1",
