--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "mongoose": "^4.7.2",
+    "node-gcm": "^0.14.4",
     "react-scripts": "0.7.0"
   },
   "dependencies": {
