--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "atob": "^2.0.3",
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
+    "gh-pages": "^1.0.0",
     "mongoose": "^4.7.2",
     "node-gcm": "^0.14.4",
     "react-scripts": "0.7.0"
@@ -28,7 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
-  "homepage" : "http://karanchahal.github.io/realblog"
+  "homepage": "http://karanchahal.github.io/karans-amazing-website"
 }
